--- a/CohortTask_Week_5/Book-Sorter/src/README
+++ b/CohortTask_Week_5/Book-Sorter/src/README
@@ -1,5 +1,5 @@
-## Book Store
-### Definition
+Book Store
+Definition
 Design a class named "Book". This class should inherit from the Comparable interface and override the "compareTo" method. Inside this method, write the code that sorts the book by name from A to Z. Create 5 objects from this class and store the objects in a data structure of Set type. Then, use a second data structure of Set type and ensure that the books are sorted by the number of pages.
 
 The Book class consists of variables for the book name, number of pages, author's name, and publication date.
